<resources>
    <string name="app_name">STS_ADMIN</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="click_to_add_route">Click to add route</string>
    <string name="source">Source :</string>
    <string name="destination">Destination :</string>
    <string name="route_info">Route Info :</string>
    <string name="add_route_info">add route info</string>
    <string name="stands_details">stands details</string>
    <string name="destination_id">Destination</string>
    <string name="source_id">Source</string>
    <string name="distance">0 km</string>
    <string name="distance_id">Distance :</string>
    <string name="fare_id">fare :</string>
    <string name="fare">0</string>
    <string name="btn_add_route_info">add route-info</string>


    <!-- bus status spinner items -->
    <string-array name="bus_status_spinner_items">
        <item>ACTIVE</item>
        <item>INACTIVE</item>
    </string-array>


    <!-- bus status spinner items -->
    <string-array name="bus_type_spinner_items">
        <item>LOCAL</item>
        <item>SHUTTLE</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <array name="Gender">
        <item>Select Gender</item>
        <item>MALE</item>
        <item>FEMALE</item>
    </array>

</resources>